force-app/main/default/objects/ShippingSalesReport__c/ShippingSalesReport__c.object-meta.xml
<CustomObject>
    <label>運送売上実績表</label>
    <nameField>
        <displayFormat>DSS-{0000000000}</displayFormat>
        <label>運送売上実績表#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>