force-app/main/default/objects/ShippingSalesReport__c/fields/CharteredVehicleSales__c.field-meta.xml
<CustomField>
    <fullName>CharteredVehicleSales__c</fullName>
    <label>傭車全体（シャト除く）実績</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>