force-app/main/default/objects/ShippingSalesReport__c/fields/CharteredVehicleSubcontractorSales__c.field-meta.xml
<CustomField>
    <fullName>CharteredVehicleSubcontractorSales__c</fullName>
    <label>傭車全体（シャト除く）下払い</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>