force-app/main/default/objects/ShippingSalesReport__c/fields/ChateraiseSales__c.field-meta.xml
<CustomField>
    <fullName>ChateraiseSales__c</fullName>
    <label>シャトレーゼ実績</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>