force-app/main/default/objects/ShippingSalesReport__c/fields/ChateraiseSubcontractorSales__c.field-meta.xml
<CustomField>
    <fullName>ChateraiseSubcontractorSales__c</fullName>
    <label>シャトレーゼ下払い</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>