force-app/main/default/objects/ShippingSalesReport__c/fields/Date2__c.field-meta.xml
<CustomField>
    <fullName>Date2__c</fullName>
    <label>日付</label>
    <length>255</length>
    <type>Text</type>
</CustomField>