force-app/main/default/objects/ShippingSalesReport__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>日付マスタ</label>
    <type>Date</type>
</CustomField>