force-app/main/default/objects/ShippingSalesReport__c/fields/FujiEchoCharteredVehicleSales__c.field-meta.xml
<CustomField>
    <fullName>FujiEchoCharteredVehicleSales__c</fullName>
    <label>富士エコー・ローソン（傭車）実績</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>