force-app/main/default/objects/ShippingSalesReport__c/fields/FujiEchoCharteredVehicleSubcontractSales__c.field-meta.xml
<CustomField>
    <fullName>FujiEchoCharteredVehicleSubcontractSales__c</fullName>
    <label>富士エコー・ローソン（傭車）下払い</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>