force-app/main/default/objects/ShippingSalesReport__c/fields/FujiEchoMfjVehicleSales__c.field-meta.xml
<CustomField>
    <fullName>FujiEchoMfjVehicleSales__c</fullName>
    <label>富士エコー・ローソン（MFJ車）実績</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>