force-app/main/default/objects/ShippingSalesReport__c/fields/FujiEchoSales_F__c.field-meta.xml
<CustomField>
    <fullName>FujiEchoSales_F__c</fullName>
    <formula>FujiEchoMfjVehicleSales__c+FujiEchoCharteredVehicleSales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>富士エコー・ローソン(売上細目)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>