force-app/main/default/objects/ShippingSalesReport__c/fields/GeneralSales_F__c.field-meta.xml
<CustomField>
    <fullName>GeneralSales_F__c</fullName>
    <formula>MARUSMfjVehicleSales__c - FujiEchoMfjVehicleSales__c + CharteredVehicleSales__c - FujiEchoCharteredVehicleSales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>一般(売上細目)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>