force-app/main/default/objects/ShippingSalesReport__c/fields/GeneralSalesSubcontractorSales_F__c.field-meta.xml
<CustomField>
    <fullName>GeneralSalesSubcontractorSales_F__c</fullName>
    <formula>/*対応未完了*/
CharteredVehicleSubcontractorSales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>一般(下払い金額)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>