force-app/main/default/objects/ShippingSalesReport__c/fields/MARUSMfjVehicleSales__c.field-meta.xml
<CustomField>
    <fullName>MARUSMfjVehicleSales__c</fullName>
    <label>マルエス（MFJ車）実績</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>