force-app/main/default/objects/ShippingSalesReport__c/fields/ObjectiveManagement__c.field-meta.xml
<CustomField>
    <fullName>ObjectiveManagement__c</fullName>
    <label>目標管理</label>
    <referenceTo>ObjectiveManagement__c</referenceTo>
    <relationshipName>ShippingSalesReport</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>