force-app/main/default/objects/ShippingSalesReport__c/fields/TotalSales_F__c.field-meta.xml
<CustomField>
    <fullName>TotalSales_F__c</fullName>
    <formula>GeneralSales_F__c + ChateraiseSales__c + FujiEchoSales_F__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>全体合計(売上細目)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>