force-app/main/default/objects/ShippingSalesReport__c/fields/TotalSubcontractorSales_F__c.field-meta.xml
<CustomField>
    <fullName>TotalSubcontractorSales_F__c</fullName>
    <formula>GeneralSalesSubcontractorSales_F__c + ChateraiseSubcontractorSales__c + FujiEchoCharteredVehicleSubcontractSales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>全体合計(下払い金額)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>