force-app/main/default/objects/ShippingSalesReport__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date2__c</columns>
    <columns>GeneralSales_F__c</columns>
    <columns>GeneralSalesSubcontractorSales_F__c</columns>
    <columns>ChateraiseSales__c</columns>
    <columns>ChateraiseSubcontractorSales__c</columns>
    <columns>FujiEchoMfjVehicleSales__c</columns>
    <columns>FujiEchoSales_F__c</columns>
    <columns>ObjectiveManagement__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>